# aoc

./: .gitignore  CMakeLists.txt  README.md  test.cpp  test.js
cpp/: aoc.h  d1.cpp  d10.cpp  d11.cpp  d12.cpp  d13.cpp  d14.cpp  d15.cpp  d15part2.cpp  d16.cpp  d2.cpp  d3.cpp  d4.cpp  d5.cpp  d6.cpp  d7.cpp  d8.cpp  d9.cpp  test.cpp
js/: d1.js  d2.js  d3.js  d4.js  d5.js
python/: day1.py  day10.py  day11.py  day12.py  day13.py  day14.py  day15.py  day16.py  day18.py  day2.py  day25.py  day3.py  day4.py  day5.py  day6.py  day7.py  day8.py  day9.py  unit_conversion.py
