cmake_minimum_required(VERSION 3.31)
project(aoc)

set(CMAKE_CXX_STANDARD 20)

add_executable(test_exec cpp/test.cpp)
add_executable(d1_exec cpp/d1.cpp)
add_executable(d2_exec cpp/d2.cpp)
add_executable(d3_exec cpp/d3.cpp)
add_executable(d4_exec cpp/d4.cpp)
add_executable(d5_exec cpp/d5.cpp)
add_executable(d6_exec cpp/d6.cpp)
add_executable(d7_exec cpp/d7.cpp)